--- a/circle.yml
+++ b/circle.yml
@@ -9,10 +9,14 @@ dependencies:
     - docker info
     - if [[ -e ~/docker/image.tar ]]; then docker load --input ~/docker/image.tar; fi
     - docker build -t freyrus/elasticsearch .
+test:
+  override:
+    - docker run -d -p 9200:9200 freyrus/elasticsearch; sleep 10
+    - curl --retry 10 --retry-delay 5 -v http://localhost:9200/_cat/health
 
 deployment:
   hub:
     branch: master
     commands:
-      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker login -e $DOCKER_EMAIL -u $   -p $DOCKER_PASS
       - docker push freyrus/elasticsearch
